# Legal-doc-analyzer

./: LICENSE  main.py  package-lock.json  pyproject.toml
backend/: main.py  requirements.txt  user.db
backend/app/: main.py
backend/app/core/: embedder.py  retriever.py
backend/app/db/user_db/: database.py  schemas.py
backend/core/: chunker.py  parsers.py
backend/user_db/: database.py  models.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/pages/: AuthPage.jsx  ChatPage.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx
